--- a/style.css
+++ b/style.css
@@ -191,6 +191,16 @@ body {
     flex-direction: column;
     align-items: center;
   }
+  .page__image {
+    display: none;
+  }
+  .form__buttons {
+    flex-direction: column;
+    gap: 16px;
+  }
+  .form__input {
+    width: 100%;
+  }
 }
 
 .section__title {
@@ -211,4 +221,3 @@ body {
   background-color: #fff;
   color: #1875e8;
 }
-
